error1.txt
execute.c: In function ‘execute’:
execute.c:12:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   12 | {
      | ^
execute.c:37: error: expected ‘{’ at end of input
   37 | }
      | 
In file included from execute.c:1:
monty.h:38:19: error: unused parameter ‘content’ [-Werror=unused-parameter]
   38 | int execute(char *content, stack_t **stack, unsigned int line_number, FILE *file)
      |             ~~~~~~^~~~~~~
monty.h:38:38: error: unused parameter ‘stack’ [-Werror=unused-parameter]
   38 | int execute(char *content, stack_t **stack, unsigned int line_number, FILE *file)
      |                            ~~~~~~~~~~^~~~~
monty.h:38:58: error: unused parameter ‘line_number’ [-Werror=unused-parameter]
   38 | int execute(char *content, stack_t **stack, unsigned int line_number, FILE *file)
      |                                             ~~~~~~~~~~~~~^~~~~~~~~~~
monty.h:38:77: error: unused parameter ‘file’ [-Werror=unused-parameter]
   38 | int execute(char *content, stack_t **stack, unsigned int line_number, FILE *file)
      |                                                                       ~~~~~~^~~~
execute.c:37: error: control reaches end of non-void function [-Werror=return-type]
   37 | }
      | 
cc1: all warnings being treated as errors
main.c: In function ‘execute’:
main.c:10:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   10 | {
      | ^
main.c:42: error: expected ‘{’ at end of input
   42 | }
      | 
In file included from main.c:1:
monty.h:38:19: error: unused parameter ‘content’ [-Werror=unused-parameter]
   38 | int execute(char *content, stack_t **stack, unsigned int line_number, FILE *file)
      |             ~~~~~~^~~~~~~
monty.h:38:38: error: unused parameter ‘stack’ [-Werror=unused-parameter]
   38 | int execute(char *content, stack_t **stack, unsigned int line_number, FILE *file)
      |                            ~~~~~~~~~~^~~~~
monty.h:38:58: error: unused parameter ‘line_number’ [-Werror=unused-parameter]
   38 | int execute(char *content, stack_t **stack, unsigned int line_number, FILE *file)
      |                                             ~~~~~~~~~~~~~^~~~~~~~~~~
monty.h:38:77: error: unused parameter ‘file’ [-Werror=unused-parameter]
   38 | int execute(char *content, stack_t **stack, unsigned int line_number, FILE *file)
      |                                                                       ~~~~~~^~~~
main.c:42: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | 
cc1: all warnings being treated as errors
opcodes.c: In function ‘execute’:
opcodes.c:11:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   11 | {
      | ^
opcodes.c:38:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   38 | {
      | ^
opcodes.c:54:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   54 | {
      | ^
opcodes.c:62: error: expected ‘{’ at end of input
   62 | }
      | 
In file included from opcodes.c:1:
monty.h:38:19: error: unused parameter ‘content’ [-Werror=unused-parameter]
   38 | int execute(char *content, stack_t **stack, unsigned int line_number, FILE *file)
      |             ~~~~~~^~~~~~~
monty.h:38:38: error: unused parameter ‘stack’ [-Werror=unused-parameter]
   38 | int execute(char *content, stack_t **stack, unsigned int line_number, FILE *file)
      |                            ~~~~~~~~~~^~~~~
monty.h:38:58: error: unused parameter ‘line_number’ [-Werror=unused-parameter]
   38 | int execute(char *content, stack_t **stack, unsigned int line_number, FILE *file)
      |                                             ~~~~~~~~~~~~~^~~~~~~~~~~
monty.h:38:77: error: unused parameter ‘file’ [-Werror=unused-parameter]
   38 | int execute(char *content, stack_t **stack, unsigned int line_number, FILE *file)
      |                                                                       ~~~~~~^~~~
opcodes.c:62: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | 
cc1: all warnings being treated as errors
